# P-LEPS

./: .coverage  .gitignore  GUI.py  GUI_Review.md  NOTES.md  README.md  existing_file.csv  flake.nix  gui_5_0.spec  lenn.h5  lenn1.0.h5  lenn1.1.keras  pyinstaller command.txt  pyproject.toml  requirements.txt  setup.py  test.csv  test5.csv  test6.csv  test9.csv
.github/workflows/: build.yml
docs/Scrum_1/: Issue Documentation.md  scrum_1_review
docs/Scrum_2/: code_review.md  issue_documentation.md
docs/Scrum_3/: plan.md
docs/Scrum_4/: tasks.md
docs/Scrum_5/: tasks.md
docs/pytest/coverage_reports/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_61bf7776033432d5___init___py.html  z_61bf7776033432d5_prediction_py.html  z_7675e61a69a6135e___init___py.html  z_7675e61a69a6135e_gui_5_0_py.html  z_a615e9671ce82068___init___py.html  z_a615e9671ce82068_preprocessing_py.html  z_dd52281f56f5d51f___init___py.html
docs/pytest/test_reports/: report.html
gui/: 2GUI.py  GUI.py  GUI2.5.py  GUI2.6.py  GUI3.0.py  GUI3.5.py  GUI4.0.py  GUI4.5.py  loan_entries.csv
hooks/: numpy_hook.py
model/: lem_dnn1.0.py  lem_dnn1.1.py  model.py
prediction/: prediction.py
preprocessing/: preprocessing.py
src/: requirements.txt  setup.py
src/gui/: gui_5_0.py  loan_entries.csv
src/model/: flake.nix  lem_dnn1.1.py  lem_dnn1.3.py  lem_dnn1.4.py  lenn1.2.keras  lenn1.3.keras
src/prediction/: lenn1.3.keras  prediction.py
src/preprocessing/: preprocessing.py  scaler.joblib  training_columns.csv
tests/: conftest.py  flake.nix  loan_entries.csv  test7.csv  test8.csv  test_gui.py  test_gui2.py  test_preprocessing.py  test_result_dialog.py  test_training_columns.py
