
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan_eligibility_checker"
version = "1.0.0"
description = "Loan Eligibility Prediction Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "customtkinter >=5.2.0",
    "pandas >=1.3.0",
    "numpy >=1.21.0",
    "scikit-learn >=1.0.0",
    "tensorflow >=2.12.0",
    "keras >=2.12.0",
    "joblib >=1.2.0"
]
